--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
+  position : sticky;
   align-items: center;
   padding: 2rem 5%;
   width: 100%;
